--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
+node_modules
 HELP.md
 .gradle
 build/
-#!**/dev-bundle/webapp/VAADIN/build
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**
-!**/src/test/**
 !**/src/main/**/build/
 !**/src/test/**/build/
 **/out/ **/build/
@@ -30,8 +28,6 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-**/out/
-**/build/
 
 ### NetBeans ###
 /nbproject/private/
@@ -42,13 +38,3 @@ out/
 
 ### VS Code ###
 .vscode/
-
-
-# The following files are generated/updated by vaadin-gradle-plugin
-node_modules/
-webpack.generated.js
-target
-out
-pnpmfile.js
-.npmrc
-frontend/generated
