--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-node_modules
 HELP.md
 .gradle
 build/
+!**/dev-bundle/webapp/VAADIN/build
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-**/out/ **/build/
-/.idea
+!**/src/main/**
+!**/src/test/**z
 
 ### STS ###
 .apt_generated
@@ -16,9 +14,6 @@ build/
 .settings
 .springBeans
 .sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
 .idea
@@ -26,8 +21,8 @@ bin/
 *.iml
 *.ipr
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+**/out/
+**/build/
 
 ### NetBeans ###
 /nbproject/private/
@@ -39,11 +34,20 @@ out/
 ### VS Code ###
 .vscode/
 
-LICENSE
-package.json
-package-lock.json
-tsconfig.json
-types.d.ts
-vite.config.ts
-vite.generated.ts
+/LICENSE
+/package.json
+/package-lock.json
+/tsconfig.json
+/types.d.ts
+/vite.config.ts
+/vite.generated.ts
+
+# The following files are generated/updated by vaadin-gradle-plugin
+node_modules/
+webpack.generated.js
+target
+out
+pnpmfile.js
+.npmrc
+frontend/generated
 
